feat: add icp-ledger and update node provider logic
- **Cargo.toml Updates**:
  - Added `icp-ledger` dependency to both the root `Cargo.toml` and the `rs/cli/Cargo.toml`, linking it to the IC GitHub repository.
  - Included `ic-nns-governance-api` dependency in `rs/ic-canisters/Cargo.toml`.

- **Registry CLI Enhancements**:
  - Introduced a `HashSet` to manage collections in `registry.rs`.
  - Extended `get_node_providers` function by adding network fetching capability, enabling node provider data to be pulled from the governance canister and merged with local registry data. It also includes reward account fetching.
  - Adjusted the `Registry` implementation to pass the network context, increasing function parameters.

- **Governance Canister Enhancements**:
  - Defined a new method `get_node_providers` in `GovernanceCanisterWrapper` to fetch node providers using the `ListNodeProvidersResponse` from the `ic_nns_governance_api`.

These changes enhance the functionality of the CLI by enabling the retrieval and integration of node provider data from the governance canister, increasing the robustness and utility of the node provider handling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -132,6 +132,7 @@ ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "a700085f0575a4
 cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "a700085f0575a440cb44941da69cfa2efeea3ab9" }
 ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "a700085f0575a440cb44941da69cfa2efeea3ab9" }
 rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "a700085f0575a440cb44941da69cfa2efeea3ab9" }
+icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "a700085f0575a440cb44941da69cfa2efeea3ab9" }
 icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "a700085f0575a440cb44941da69cfa2efeea3ab9" }
 ic-transport-types = "0.39.1"
 ic-utils = "0.39.0"
