--- a/rs/ic-canisters/Cargo.toml
+++ b/rs/ic-canisters/Cargo.toml
@@ -19,6 +19,7 @@ ic-management-canister-types = { workspace = true }
 ic-nns-common = { workspace = true }
 ic-nns-constants = { workspace = true }
 ic-nns-governance = { workspace = true }
+ic-nns-governance-api = { workspace = true }
 ic-protobuf = { workspace = true }
 ic-registry-transport = { workspace = true }
 ic-utils = { workspace = true }
