--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -29,9 +29,6 @@ features:
   - feature: data_center
     value: ty2
     explanation: "offboarding TY2 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/32 and https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/42"
-  - feature: node_operator
-    value: 4ohfd-bdyeu-5djlz-rf3lc-bqca2-h22rg-t5ipt-cjhl2-r5dbf-tk3fv-hae
-    explanation: "offboarding Sygnum ZH5 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/27"
   - feature: data_center
     value: ch2
     explanation: "offboarding CH2 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/40"
@@ -48,8 +45,8 @@ features:
     value: mr1
     explanation: "offboarding MR1 DC after 48 months; https://forum.dfinity.org/t/dfinity-gen-1-servers-available-for-sale-through-silent-auction/36710"
   - feature: data_center
-    value: MM1
+    value: mm1
     explanation: "offboarding MM1 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/49 and https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/103 "
   - feature: data_center
-    value: ZH5
-    explanation: "offboarding ZH5 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/27"
+    value: zh5
+    explanation: "offboarding ZH5 DC after 48 months; https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/117 and https://forum.dfinity.org/t/proposal-update-interim-gen-1-node-provider-remuneration-after-48-months/35001/118"
