--- a/rs/slack-notifications/conf/neurons-slack-mapping.yaml
+++ b/rs/slack-notifications/conf/neurons-slack-mapping.yaml
@@ -49,8 +49,8 @@
   slack_id: U02RZR7PDK4  # Björn Assmann
 - neuron_id: 55
   slack_id: U02UZQSG468  # Maximilian Summe
-- neuron_id: 56
-  slack_id: UJHLZDMD4    # Khushboo
+# - neuron_id: 56
+#   slack_id:
 - neuron_id: 57
   slack_id: U010G9RRJ4A  # Shuo Wang
 - neuron_id: 58
@@ -67,8 +67,8 @@
   slack_id: U07TLD4BZAS  # Yusef Habib Fernández
 - neuron_id: 64
   slack_id: U01806HR6MP  # Ian Blenke
-- neuron_id: 65
-  slack_id: UGNMPG3LL    # Christian Müller
+# - neuron_id: 65
+#   slack_id:
 - neuron_id: 66
   slack_id: U01EQQYUWRG  # Sam Howard
 - neuron_id: 67
@@ -77,18 +77,18 @@
   slack_id: U02L4JU6E6T  # David Dal Busco
 - neuron_id: 69
   slack_id: UK6PJFR9A    # Nicolas Mattia
-- neuron_id: 70
-  slack_id: UL6RB18A0    # Roman Kashitsyn
+# - neuron_id: 70
+#   slack_id:
 - neuron_id: 71
   slack_id: U01Q0ED6SDB  # Leon Tan
-- neuron_id: 72
-  slack_id: U02MNAPVA8L  # Daniel Thurau
-- neuron_id: 73
-  slack_id: U02LQR955Q9  # Frederik Rothenberger
-- neuron_id: 74
-  slack_id: U03M9TVSQ6Q  # Léo Kazmierczak
-- neuron_id: 75
-  slack_id: U02D55X2D50  # Mario Pastorelli
+# - neuron_id: 72
+#   slack_id:
+# - neuron_id: 73
+#   slack_id:
+# - neuron_id: 74
+#   slack_id:
+# - neuron_id: 75
+#   slack_id:
 - neuron_id: 76
   slack_id: U03NX058Y9L  # Stephanus Jacobus Fischer
 - neuron_id: 77
@@ -99,8 +99,8 @@
   slack_id: U04CV3YLN2G  # Maciej Modelski
 - neuron_id: 9014191754770650971
   slack_id: UD5P5BP5K    # Maria Dubovitskaya https://dfinity.slack.com/archives/C02NJPNSLM6/p1674935817983889?thread_ts=1674934727.112299&cid=C02NJPNSLM6
-- neuron_id: 9593925519518438069
-  slack_id: U03T4M2EQ6L  # Nikolas Haimerl
+# - neuron_id: 9593925519518438069
+#   slack_id:
 - neuron_id: 17212304975669116357
   slack_id: U03LSTP0YB1  # Grégory Demay
 - neuron_id: 17511507705568200227
