--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,8 +59,8 @@ jobs:
         id: tag
         run: |
           TAG=${GITHUB_REF#refs/*/}
-          # Cache mk_release.py from this commit
-          cp bin/mk_release.py /tmp
+          # Cache bin/mk-release.py from this commit
+          cp bin/mk-release.py /tmp
           git pull origin main:main
           git checkout main
 
@@ -70,10 +70,10 @@ jobs:
           echo "Using tag $TAG"
 
           # Copy cached version back
-          yes | cp /tmp/mk_release.py bin/ 
-          rye run python /tmp/mk_release.py $TAG
+          yes | cp bin/mk-release.py bin/ 
+          rye run python /tmp/mk-release.py $TAG
           # Reset the cached version
-          git checkout main -- bin/mk_release.py
+          git checkout main -- bin/mk-release.py
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
       ########################################
