--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -40,6 +40,9 @@ jobs:
       pages: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-tags: true
+          fetch-depth: 0
 
       - name: "☁️ Setup runner"
         uses: ./.github/workflows/manage-runner-pre
@@ -60,7 +63,7 @@ jobs:
         run: |
           TAG=${GITHUB_REF#refs/tags/}
           if [[ $TAG == refs/* ]]; then
-            TAG="v0.5.9-testing"
+            TAG="v0.5.9"
           fi
 
           echo "Will be using tag $TAG"
@@ -111,6 +114,6 @@ jobs:
           branch: bot-release-${{ steps.tag.outputs.tag }}
           title: "chore(release): New release of `dre` version ${{ steps.tag.outputs.tag }}"
           body: "This PR updates versions in the code used to generate the contents of a new release `[${{ steps.tag.outputs.tag }}](${{ steps.release.outputs.url }})`"
-          token: ${{ inputs.PUSH_TOKEN }}
+          token: ${{ steps.app-token.outputs.token }}
           base: main
         
