--- a/Cargo.toml
+++ b/Cargo.toml
@@ -211,5 +211,5 @@ indexmap = { version = "2.7.0", features = ["serde"] }
 # https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
 debug = true
 
-[patch.crates-io]
-ic0 = { git = "https://github.com/dfinity/cdk-rs.git", rev = "8f57d6d26b1d142b5be4b39ea8ade59d7c848cde" }
+[patch.'https://github.com/dfinity/cdk-rs.git']
+ic0 = "0.23.0"
