--- a/Cargo.toml
+++ b/Cargo.toml
@@ -210,3 +210,6 @@ indexmap = { version = "2.7.0", features = ["serde"] }
 # Makes flamegraphs and backtraces more readable.
 # https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
 debug = true
+
+[patch.'https://github.com/dfinity/cdk-rs.git']
+ic0 = "0.23.0"
