--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,6 @@
 [mypy]
+strict = True
 namespace_packages = True
 ignore_missing_imports = True
+follow_imports = silent
+follow_imports_for_stubs = True
