--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,7 @@
+# Mypy support.
+# Targets with tag "typecheck" will get type-checked when built, run or tested.
+# common --enable_bzlmod --aspects //tools:aspects.bzl%mypy_aspect --output_groups=+mypy
+
 build --workspace_status_command=$(pwd)/bazel/workspace_status.sh --stamp
 
 # Use local disk cache by default
