Fix syntax error

--- a/rs/slack-notifications/conf/neurons-slack-mapping.yaml
+++ b/rs/slack-notifications/conf/neurons-slack-mapping.yaml
@@ -85,7 +85,7 @@
   slack_id: U0574S1N1BP  # Jason Zhu
 - neuron_id: 73
   slack_id: U07QU4DNV5Y  # Andri Schatz
-- neuron_id: 74
+# - neuron_id: 74
 #   slack_id:
 # - neuron_id: 75
 #   slack_id:
