--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,11 @@
 releases:
   # NOTE: Make sure to mark security hotfixes with the `security_fix: true` flag.
+  - rc_name: rc--2025-01-16_03-04
+    versions:
+      # Qualification pipeline:
+      # https://github.com/dfinity/ic/actions/runs/12801265879
+      - name: base
+        version: 85af5fc7b9963f10bb6fd30d7929814501d783c7
   - rc_name: rc--2025-01-09_03-19
     versions:
       # Qualification pipeline:
