Progressive typification of release controller.
1. Typing (not complete).
2. Functional change: check on start for existing election proposals, and save them in local database.
3. Functional change: do no work for versions and releases that have already been proposed.

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -86,7 +86,7 @@ py_test(
     srcs = ["pytest.py"],
     data = glob(["*.py"], exclude = long_tests) + glob(["test_data/*"]),
     env = env,
-    tags = ["no-sandbox"],
+    tags = ["no-sandbox", "typecheck"],
     deps = deps + dev_deps,
     env_inherit = ["HOME"],
 )
