Furthering of typing fixes.

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,4 @@ namespace_packages = True
 ignore_missing_imports = True
 follow_imports = silent
 follow_imports_for_stubs = True
+mypy_path = $MYPY_CONFIG_FILE_DIR/release-controller
